feat: add query parameters support
